typescript/checker/tests/conformance/parser/ecmascript5/Statements/parserForInStatement4.ts.stderr
error: Unexpected initializer in for in/of loop
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserForInStatement4.ts:1:10
  |
1 | for (var a = 1 in X) {
  |          ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            18,
        ),
        hi: BytePos(
            19,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserForInStatement4.ts:1:19
  |
1 | for (var a = 1 in X) {
  |                   ^

